feat(audio): migrate audio UDP transport and WebSocket to Netty